--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,9 @@
 # Site settings
-title: RUCS
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: RUCS | Review of Undergraduate Computer Science
+email: kawin@cs.toronto.edu
+description: RUCS is a non-archival publication featuring the best of undergraduate computer science research at the University of Toronto.
 baseurl: "/RUCS-Web" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 markdown: kramdown
